feat: corrections to style and to admin route in the App.js

--- a/src/index.css
+++ b/src/index.css
@@ -402,13 +402,20 @@ textarea {
 }
 
 /* LOGIN FORM */
+
+.login-page h2{
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  color: var(--green);
+}
 .login-form-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 20px;
-  background-color: var(--dark-green);
+  background-color: var(--light-green);
   border-radius: 10px;
   box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.2);
   max-width: 400px;
@@ -422,7 +429,7 @@ textarea {
 }
 
 .login-form-container label {
-  color: var(--white);
+  color: var(--light-grey);
   margin-top: 20px;
   margin-bottom: 10px;
 }
@@ -435,7 +442,7 @@ textarea {
 
 .login-form-container button {
   color: var(--white);
-  background-color: var(--even-darker-green);
+  background-color: var(--green);
   border: none;
   border-radius: 5px;
   padding: 10px;
@@ -445,7 +452,7 @@ textarea {
 }
 
 .login-form-container button:hover {
-  background-color: var(--light-grey);
+  background-color: var(--dark-green);
 }
 
 .login-form-container .error-message {
