feat: so many things

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --white: #ffffff;
   --light-grey: #f9f9f9;
   --error: #ff0000;
+  --error-hover: #7e0000;
   --font-primary: "Roboto", sans-serif;
   --font-code: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
