--- a/src/components/pages/RealEstateDetails.css
+++ b/src/components/pages/RealEstateDetails.css
@@ -9,18 +9,18 @@
   margin-bottom: 20px;
 }
 
-.real-estate-details h2 {
+.real-estate-details__title {
   margin-bottom: 20px;
 }
 
-.real-estate-details .image-container {
+.real-estate-details__images {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-bottom: 20px;
 }
 
-.real-estate-details .image-container .main-image {
+.real-estate-details__images__main {
   width: 100%;
   max-width: 600px;
   object-fit: cover;
@@ -28,14 +28,14 @@
   margin-bottom: 20px;
 }
 
-.real-estate-details .image-container .thumbnail-container {
+.real-estate-details__images__thumbnails {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
   margin-top: 20px;
 }
 
-.real-estate-details .image-container .thumbnail {
+.real-estate-details__images__thumbnails__item {
   width: 100px;
   height: 100px;
   object-fit: cover;
@@ -44,47 +44,47 @@
   transition: opacity 0.3s ease;
 }
 
-.real-estate-details .image-container .thumbnail:hover {
+.real-estate-details__images__thumbnails__item:hover {
   opacity: 0.7;
 }
 
-.real-estate-details .details-container {
+.real-estate-details__details {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
 }
 
-.real-estate-details .details-container h2 {
+.real-estate-details__details__title {
   font-size: 2em;
   margin-bottom: 10px;
 }
 
-.real-estate-details .details-container p {
+.real-estate-details__details__description {
   font-size: 1.2em;
   margin-bottom: 10px;
 }
 
-.real-estate-details .details-container .extra-info {
+.real-estate-details__details__extra {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   width: 100%;
 }
 
-.real-estate-details .details-container .extra-info div {
+.real-estate-details__details__extra__item {
   display: flex;
   justify-content: space-between;
   width: 100%;
   margin-bottom: 10px;
 }
 
-.real-estate-details .details-container .extra-info div strong {
+.real-estate-details__details__extra__item__title {
   font-weight: bold;
 }
 
 @media screen and (max-width: 600px) {
-  .real-estate-details .details-container .extra-info div {
+  .real-estate-details__details__extra__item {
     flex-direction: column;
   }
 }
