--- a/src/components/common/Header.css
+++ b/src/components/common/Header.css
@@ -1,12 +1,19 @@
 .navbar {
   background-color: var(--even-darker-green);
   padding: 1em 0;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 .navbar-brand .navbar-item {
   font-size: 1.5em;
   font-weight: bold;
   color: var(--light-green);
+}
+
+.navbar-brand .navbar-item:hover {
+  color: var(--light-grey);
 }
 
 .navbar-menu {
@@ -25,6 +32,14 @@
 }
 
 @media screen and (max-width: 768px) {
+  .navbar {
+    background-color: var(--even-darker-green);
+    padding: 1em 0;
+    position: unset;
+    top: 0;
+    z-index: unset;
+  }
+
   .navbar-menu {
     flex-direction: column;
     align-items: flex-start;
