--- a/src/components/common/Pagination.css
+++ b/src/components/common/Pagination.css
@@ -3,19 +3,18 @@
   margin: 20px 0;
 }
 
-.pagination {
+.pagination-pagination {
   display: inline-block;
   padding-left: 0;
   margin: 20px 0;
   border-radius: 4px;
 }
 
-.pagination > li {
+.pagination-pagination > .pagination-item {
   display: inline;
 }
 
-.pagination > li > a,
-.pagination > li > span {
+.pagination-pagination > .pagination-item > .pagination-link {
   position: relative;
   float: left;
   padding: 6px 12px;
@@ -27,33 +26,26 @@
   border: 1px solid var(--light-green);
 }
 
-.pagination > li:first-child > a,
-.pagination > li:first-child > span {
+.pagination-pagination > .pagination-item:first-child > .pagination-link {
   margin-left: 0;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
 
-.pagination > li:last-child > a,
-.pagination > li:last-child > span {
+.pagination-pagination > .pagination-item:last-child > .pagination-link {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
 
-.pagination > li > a:hover,
-.pagination > li > span:hover,
-.pagination > li > a:focus,
-.pagination > li > span:focus {
+.pagination-pagination > .pagination-item > .pagination-link:hover,
+.pagination-pagination > .pagination-item > .pagination-link:focus {
   color: var(--dark-green);
   background-color: var(--light-green);
 }
 
-.pagination > .active > a,
-.pagination > .active > span,
-.pagination > .active > a:hover,
-.pagination > .active > span:hover,
-.pagination > .active > a:focus,
-.pagination > .active > span:focus {
+.pagination-pagination > .pagination-active > .pagination-link,
+.pagination-pagination > .pagination-active > .pagination-link:hover,
+.pagination-pagination > .pagination-active > .pagination-link:focus {
   z-index: 2;
   color: var(--white);
   cursor: default;
