--- a/src/components/display/Banner.css
+++ b/src/components/display/Banner.css
@@ -1,17 +1,27 @@
-.banner {
+.banner-container {
   position: relative;
   width: 100%;
   max-height: 500px;
   overflow: hidden;
 }
 
-.banner img {
+.banner-container:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+}
+
+.banner-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.banner-content {
+.banner-content-container {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -21,21 +31,21 @@
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
-.banner-content h1 {
+.banner-heading {
   font-size: 2.5em;
   margin-bottom: 1em;
 }
 
-.banner-content p {
+.banner-text {
   font-size: 1.2em;
 }
 
 @media screen and (max-width: 768px) {
-  .banner-content h1 {
+  .banner-heading {
     font-size: 1.5em;
   }
 
-  .banner-content p {
+  .banner-text {
     font-size: 1em;
   }
 }
