--- a/src/components/display/RegisterAndEditForm.css
+++ b/src/components/display/RegisterAndEditForm.css
@@ -26,68 +26,71 @@ form {
   max-height: 80vh; /* Limits form height to 80% of the viewport height */
 }
 
-label {
+.form-label {
   color: var(--dark-green);
   margin: 10px 0;
 }
 
-input,
-textarea {
+.form-input,
+.form-textarea {
   padding: 5px;
   margin-bottom: 10px;
   border-radius: 5px;
   border: 1px solid var(--green);
   width: 100%;
+  transition: border-color 0.3s ease;
 }
 
-.cancel {
+.form-input:focus,
+.form-textarea:focus {
+  border-color: var(--dark-green);
+}
+
+.imageUrl {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+.button {
+  color: var(--light-grey);
+  border: none;
+  padding: 0.5em 1em;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+  align-self: center;
+  width: 10em;
+}
+
+.button:active {
+  transform: scale(0.98);
+}
+
+.cancel-button {
   background-color: var(--error);
-  color: var(--white);
-  border: none;
-  padding: 0.5em 1em;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  margin-bottom: 1em;
-  align-self: center;
-  width: 10em;
 }
 
-.save {
+.save-button {
   background-color: var(--green);
-  color: var(--light-grey);
-  border: none;
-  padding: 0.5em 1em;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  align-self: center;
-  width: 10em;
 }
 
-.cancel:hover {
-  background-color: var(--error-hover);
-  color: var(--light-grey);
+.cancel-button:hover {
+  background-color: #cc0000;
 }
 
-.save:hover {
+.save-button:hover {
   background-color: var(--dark-green);
 }
 
-.cancel:active {
-  transform: scale(0.98);
-}
-
-.save:active {
-  transform: scale(0.98);
-}
-
 @media screen and (max-width: 600px) {
-  form {
+  .form {
     padding: 10px;
     width: 90%;
     max-height: 90vh; /* Increase max height for small screens */
   }
 
-  button {
+  .button {
     width: 100%;
   }
 }
