--- a/src/components/lists/AdminList.css
+++ b/src/components/lists/AdminList.css
@@ -26,7 +26,7 @@ h3 {
   margin-left: 1em;
 }
 
-img {
+.admin-list-img {
   width: 150px;
   height: 100px;
   object-fit: cover;
@@ -36,6 +36,7 @@ img {
 
 .delete {
   background-color: var(--error);
+  transition: background-color 0.3s ease;
 }
 
 .delete:hover {
@@ -61,4 +62,24 @@ button:hover {
 
 button:active {
   transform: scale(0.98);
+}
+
+@media screen and (max-width: 600px) {
+  .info {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  img {
+    margin-bottom: 1em;
+  }
+
+  h3 {
+    margin: 0 0 1em 0;
+  }
+
+  button {
+    margin-bottom: 1em;
+    width: 100%;
+  }
 }
