--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* index.css */
+
 /* STYLE VARIABLES */
 :root {
   --dark-green: #214001;
@@ -23,48 +25,19 @@ body {
   padding: 0;
   font-family: var(--font-primary);
   background-color: var(--light-green);
+  background-color: #558c03; /* fallback color for browsers not supporting CSS variables */
   color: var(--dark-green);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
+.global-font-code {
   font-family: var(--font-code);
 }
 
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ol,
-ul {
-  margin: 0;
-  padding: 0;
-  font-weight: normal;
-}
-
-ol,
-ul {
-  list-style: none;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-input,
-button,
-textarea {
+.global-input,
+.global-button,
+.global-textarea {
   font-family: var(--font-primary);
 }
 
