--- a/src/components/lists/AdminList.css
+++ b/src/components/lists/AdminList.css
@@ -16,12 +16,12 @@
   margin-bottom: 2em;
 }
 
-h2 {
+.admin-list-h2 {
   color: var(--dark-green);
   margin-bottom: 20px;
 }
 
-h3 {
+.admin-list-h3 {
   color: var(--dark-green);
   margin-left: 1em;
 }
@@ -44,7 +44,7 @@ h3 {
   color: var(--white);
 }
 
-button {
+.edit {
   background-color: var(--green);
   color: var(--light-grey);
   border: none;
@@ -55,31 +55,39 @@ button {
   width: 6em;
 }
 
-button:hover {
+.edit:hover {
   background-color: var(--dark-green);
   color: var(--light-green);
 }
 
-button:active {
+.edit:active {
   transform: scale(0.98);
 }
 
-@media screen and (max-width: 600px) {
+@media (max-width: 900px) {
   .info {
     flex-direction: column;
-    align-items: flex-start;
   }
-
-  img {
-    margin-bottom: 1em;
+  .admin-list-img {
+    width: 130px;
+    height: 90px;
   }
+}
 
-  h3 {
-    margin: 0 0 1em 0;
+@media (max-width: 600px) {
+  .admin-list-img {
+    width: 100px;
+    height: 70px;
   }
+}
 
-  button {
-    margin-bottom: 1em;
-    width: 100%;
+@media (max-width: 400px) {
+  .admin-list-img {
+    width: 70px;
+    height: 50px;
+  }
+  .admin-list-h2,
+  .admin-list-h3 {
+    font-size: 0.9rem;
   }
 }
